# pre_jam

./: .gitignore  Cargo.toml  Trunk.toml  tailwind.config.js
.cargo/: config.toml
game/: Cargo.toml  Trunk.toml
game/assets/models/: astro_test.glb
game/assets/raw/: Scene.glb  astro.glb  canvas.ase  inv.glb  reg.glb  starperssure.blend  starperssure.blend1
game/assets/shaders/: chain_graph.wgsl  collision_graph.wgsl  interact.wgsl  post_process.wgsl  rope.wgsl  touch_grass.wgsl  velocity_buffer.wgsl  wave_graph.wgsl
game/assets/shaders/tilemap/: blur.wgsl  compositor.wgsl  light.wgsl  light_sources.wgsl  material.wgsl  simple_light.wgsl  test_compositor.wgsl  test_light.wgsl
game/assets/tilemaps/test/: rule4.tmx  starpressure.tiled-session  test16.tmx  tilepack.tsx
game/assets/tilemaps/v1.0/: map.tmx  p.tiled-project  p.tiled-session  pad_test.tmx  pad_test.tsx  project.tiled-session  rules.tmx  test.tmx  test.tsx  tilemap.tsx  tilemap_old.tsx
game/assets/tilemaps/v2.0/: autobg.tmx  main.tmx  main.tsx  project.tiled-project  project.tiled-session  rules.tmx  rules.txt
game/assets_raw/: my_tiled_export_file.json  objects.json
game/assets_raw/PYSTAR/: main.py  pipes.py
game/assets_raw/images/: Sprite-0027.ase  astro.pdn  astro_new.pdn  btn_lights.pdn  button.ase  cake.pdn  canvas.ase  glyphs.pdn  glyphs_min.pdn  hack_btn.pdn  hack_btns.pdn  malf.ase  reactor.pdn  shelf.pdn  spinner.ase  spinner.pdn  truster.pdn  unn.pdn  wire_plug.pdn  здфт.pdn
game/assets_raw/models/: Untitled.glb  astro_test.glb  canvas.ase  dancin.glb  ui.pdn  ui_raw.pdn
game/assets_raw/models_src/: astro.fbx  astro.glb  dancin.glb  starperssure1.fbx
game/assets_raw/test/: main.tmx  map.tmx  rules.txt  test16tiles.tsx  tilemap2.tsx
game/src/: anim.rs  clear.rs  core.rs  main.rs  normalmaps.rs  shader_minimal.rs  shaders.rs  test.rs  tiled.rs  ui.rs
game/src/camera/: plugin.rs
game/src/core/: mod.rs  plugin.rs  states.rs
game/src/interactions/: chain_reaction_display.rs  collision_minigame.rs  components.rs  hack_minigame.rs  interactables_ui.rs  mod.rs  pipe_puzzle.rs  systems.rs  unteractables_ui.rs  warning_interface.rs  wave_modulator.rs  wires_minigame.rs
game/src/physics/: animator.rs  constants.rs  controller.rs  mod.rs  platforms.rs  player.rs  scene.rs
game/src/tilemap/: light.rs  mod.rs  plugin.rs
game/src/ui/: mod.rs  plugin.rs  target.rs
game/src/ui/components/: containers.rs  hack_button.rs  mod.rs  spinny.rs  ui_atlas_container.rs  ui_submit_button.rs  wire_inlet.rs
game/src/ui/components/containers/: base.rs  mod.rs  text_display.rs  viewport_container.rs
game/src/utils/: background.rs  cursor.rs  custom_material_loader.rs  debree.rs  energy.rs  malf_guide.rs  mod.rs  mouse.rs  noise.rs  spacial_audio.rs
game/tiled/: Cargo.toml
game/web/: index.html  style.css
libs/bevy_ecs_tiled/: Cargo.toml
libs/bevy_ecs_tiled/src/: lib.rs  reader.rs
libs/bevy_ecs_tiled/src/map/: mod.rs
libs/debug_utils/: Cargo.toml
libs/debug_utils/src/: debug_overlay.rs  inspector.rs  lib.rs  rapier.rs
libs/pixel_utils/: Cargo.toml
libs/pixel_utils/src/: camera.rs  lib.rs  post_processing.rs
libs/shaders/: Cargo.toml
libs/shaders/src/: components.rs  compute.rs  lib.rs
libs/utils/: Cargo.toml
libs/utils/src/: lib.rs
web/: style.css
