[workspace]
members = ["libs/pixel_utils", "game", "libs/debug_utils", "libs/utils", "libs/shaders", "libs/bevy_ecs_tiled"]
resolver = "2"


[workspace.dependencies]
bevy = {version="0.16.1", features = ["web"]}
bevy_rapier2d = { version = "0.30.0", features = ["serde-serialize", "debug-render-2d", "simd-stable"] } #  "parallel", 
bevy-inspector-egui = "0.31.0"
debug_utils = { path = "libs/debug_utils" }
pixel_utils = { path = "libs/pixel_utils" }
bevy_tailwind = "0.3.0"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"



