[package]
name = "game"
version = "0.0.1-infdev"
edition = "2024"


[dependencies]
bevy-inspector-egui.workspace = true
debug_utils = {workspace = true, features = ["debug_overlay"] }
pixel_utils.workspace = true
utils = { version = "0.1.0", path = "../libs/utils" }
shaders = { version = "0.1.0", path = "../libs/shaders" }
bevy_ecs_tilemap = { version = "0.16.0"}
bevy_rapier2d = { workspace = true, features = ["serde-serialize", "debug-render-2d", "simd-stable"] } #  "parallel", 
bevy_ecs_tiled = { version = "0.7.0", path = "../libs/bevy_ecs_tiled", features = ["wasm", "rapier", "physics", "rapier_debug", "user_properties"] }
bevy_asset_loader = { version = "0.23.0", features = ["2d", "3d"] }
bevy_framepace = "0.19.1"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
num_enum = "0.7.3"
bevy = { workspace = true, features = ["mp3", "wav", "dynamic_linking"]  }
bevy_tailwind.workspace = true
itertools = "0.14.0"
tiled = {version="0.14.0", features = ["wasm"]}


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["file_watcher", "embedded_watcher"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, features = ["web"] }

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "shaders"
path = "src/shaders.rs"


