[package]
name = "debug_utils"
authors = ["kaiva-morphin <kaivamorphin@gmail.com>"]
version = "0.1.0"
edition = "2024"

[features]
default = []
debug_overlay = []

[dependencies]
bevy-inspector-egui.workspace = true
bevy = {workspace = true, features = ["web"]}
bevy_rapier2d = { workspace = true, features = ["serde-serialize", "debug-render-2d", "simd-stable"] } #  "parallel", 


[target.x86_64-pc-windows-msvc]
features = "bevy/dynamic_linking"