[package]
name = "shaders"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy-inspector-egui = "0.31.0"
bevy_rapier2d = { version = "0.30.0", features = ["serde-serialize", "debug-render-2d", "parallel", "simd-stable"] }
bytemuck = "1.23.0"
pixel_utils.workspace = true
rand = "0.9.1"
