[package]
name = "shaders"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy-inspector-egui = "0.31.0"
bytemuck = "1.23.0"
pixel_utils.workspace = true
bevy = {workspace = true, features = ["web"]}
bevy_rapier2d = { workspace = true, features = ["serde-serialize", "debug-render-2d", "simd-stable"] } #  "parallel", 



[target.x86_64-pc-windows-msvc]
features = "bevy/dynamic_linking"
